--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 0px){
 nav #desktop{
     display: none;
 }
@@ -76,7 +77,9 @@ nav #desktop{
 
   /* end of nav styling */
 
-  
+  #desktopView{
+    display: none;
+  }
   .homeGrid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -203,6 +206,7 @@ max-height: fit-content;
  .leaderGrid a{
    
     width: fit-content;
+    height: fit-content;
     margin: auto;
 
     margin-top: 15px;
@@ -213,7 +217,8 @@ max-height: fit-content;
     border: solid 5px #FFCB05;
  }
 
- .leaderGrid h2{
+ .leaderGrid .leaderInfo h2{
+    width: fit-content;
     margin: auto;
     font-size: 150%;
     color: rgb(94, 92, 92);
@@ -223,12 +228,13 @@ max-height: fit-content;
     border: solid 3px #FFCB05;
  }
 
- .leaderGrid h3{
+ .leaderGrid .leaderInfo h3{
     margin: auto;
     font-size: 125%;
     font-style: italic;
     color: rgba(255, 255, 255, 0.8);
     margin-bottom: 10px;
+    width: fit-content;
 
  }
 
@@ -344,10 +350,288 @@ max-height: fit-content;
     
 }
 
+}
 
- 
- 
+@media only screen and (min-width: 1000px){
 
- 
+    nav #mobileLinks {
+        display: none;
+    }
 
+    nav #desktop{
+        display: block;
+    }
+
+    nav #desktop li{
+        display: inline-block;
+        margin: 15px;
+        
+        margin-left: 5%;
+        margin-right: 5%;
+      
+        font-family: Gabarito;
+        font-size: 150%;
+        color: rgba(255, 255, 255);
+        /* text-align: center; */
+      }
+      nav #desktop ul{
+        text-align: center;
+        height: fit-content;
+      }
+      
+      nav #desktop{
+        background-color: rgb(94, 92, 92);
+      }
+
+      /* sets current link to stay in focus state */
+    nav .currentPage{
+    background-color: rgba(255, 255, 255);
+    color: rgb(94, 92, 92);
+    padding: 15px;
+    text-decoration: underline;
+    height: inherit;
+  }
+  
+    nav #desktopLinks a:focus, nav #desktopLinks a:hover{
+    background-color: #d4d1d1;
+    border: 2px solid black;
+    padding: 10px;
+  }
+
+  /* home page */
+
+  #desktopView{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  #desktopView .container{
+    margin: auto;
+    height: 100%;
+
+  }
+
+  .container img{
+    padding: 5px;
+    margin: auto;
+    height: 85%;
+    background-color: rgba(255, 255, 255);
+    border: 2px solid #FFCB05;
+    
+  }
+
+  #home{
+    height: 100%;
+  }
+
+.overview{
+    font-size: 150%;
+}
+
+
+
+
+  /* leaders */
+
+  .leaderGrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .leaderGrid .leaderInfo{
+    grid-column: 1/2;
+    font-size: 150%;
+  }
+
+  .leaderGrid a {
+    grid-column: 1/2;
+  }
+
+  .leaderGrid a img {
+    width: 100%;
+  }
+
+  .leaderGrid .opposite {
+    grid-column: 3/-1;
+    grid-row: auto + 1;
+  }
+
+  #Lo {
+    height: fit-content;
+    margin: auto;
+    margin-right: 20px;
+    grid-column: 2/-1;
+    grid-row: 2;
+    font-size: 125%;
+  }
+
+
+
+  #La {
+    height: fit-content;
+    margin: auto;
+    margin-left: 20px;
+    grid-column: 1/3;
+    grid-row: 4;
+    font-size: 125%;
+  }
+
+  #LaPic{
+    grid-row: 4;
+  }
+
+  #LaInfo {
+    grid-row: 5;
+    grid-column: 3/-1;
+  }
+
+  #BPic{
+    grid-column: 1/2;
+    grid-row: 6;
+  }
+
+  #B{
+    grid-row: 6;
+    grid-column: 2/-1;
+
+    height: fit-content;
+    margin: auto;
+    margin-right: 20px;
+ 
+    font-size: 125%;
+  }
+
+  #BInfo {
+    grid-row: 7;
+    grid-column: 1/2;
+  }
+
+  #Z {
+    grid-row: 8;
+    grid-column: 1/3;
+
+    height: fit-content;
+    margin: auto;
+    margin-left: 20px;
+    font-size: 125%;
+  }
+
+  #ZInfo{
+    grid-row: 9;
+    grid-column: 3/-1;
+  }
+
+  #ZPic{
+    grid-row: 8;
+  }
+
+  .aboutGrid{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .aboutGrid h1{
+    font-size: 250%;
+  }
+
+  .aboutGrid h2{
+    grid-row: 2;
+    font-size: 175%;
+  }
+
+  .aboutGrid .mission{
+    font-size: 125%;
+  }
+
+  .aboutGrid .scroll{
+    grid-row: 3;
+    grid-column: 1/3;
+    height: fit-content;
+  }
+
+
+
+  .year2022{
+    grid-row: 3;
+    grid-column: 3/-1;
+
+    max-height: 400px;
+    overflow: auto;
+    font-size: 125%;
+  }
+
+
+  .year2022:focus{
+    overflow: visible;
+    background-color: white;
+    max-height: fit-content;
+  }
+
+  .joinGrid iframe{
+    width: 75%;
+  }
+
+  .joinGrid p{
+    font-size: 150%;
+  }
+
+  .footer{
+    font-size: 100%;
+  }
+
+#desktop li a:focus{
+    border: 2px solid black;
+}
+
+.explore a:focus{
+    border: 2px solid rgb(94, 92, 92);
+}
+
+.container {
+    position: relative;
+    width: 50%;
+  }
+  
+  .image {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #FFCB05;
+  }
+  
+  .container:hover .overlay {
+    opacity: 1;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  #mobileView {
+    display: none;
+  }
+
+  .container .overlay a:focus, .container .overlay a:hover{
+    border: solid 2px rgb(94, 92, 92);
+  }
+  }
 
